@@ -1,3 +1,8 @@
+Mon Nov 16 15:58:39 2015  Kenichi Kamiya  <kachick1@gmail.com>
+
+	* struct.c: Standardize a method signature of Struct#[]=.
+	  [ci skip][fix GH-1095]
+
 Mon Nov 16 15:42:36 2015  Akinori MUSHA  <knu@iDaemons.org>
 
 	* lib/set.rb (#>=, #>, #<=, #<): Make use of Hash#>=, #>, #<, and
